Changed order and content of general steps near beginning.

--- a/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
+++ b/product_docs/docs/pgd/5/admin-tpa/upgrading_major_rolling.mdx
@@ -25,8 +25,9 @@ To perform the rolling upgrade of the Postgres major version on your PGD cluster
 - Run the Postgres major version upgrade.
 - Modify the Postgres service.
 - Start Postgres.
+- Validate the new Postgres version. 
+- Test the upgrade directly against the newly upgraded node.
 - Cleanup post-upgrade. 
-- Validate the Postgres version. 
 
 We will look at these steps in more detail below, specifically for upgrading a node from Postgres 15 to Postgres 16. 
 
